1.IaaS/ARMTemplate/nsg-deploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "location name"
      }
    },
    "nsgName": {
      "type": "string",
      "metadata": {
        "description": "Network Security Group Name"
      }
    }
  },
  "functions": [],
  "variables": {},
  "resources": [{
    "name": "[parameters('nsgName')]",
    "type": "Microsoft.Network/networkSecurityGroups",
    "apiVersion": "2020-11-01",
    "location": "[parameters('location')]",
    "tags": {
        "owner": "SeoTaeYeol",
        "environment": "dev",
        "serviceTitle": "homepage",
        "personalInformation": "no"
    },   
    "properties": {
      "securityRules": [
        {
            "name": "nsgr-ssh",
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "name": "nsgr-www",
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "name": "nsgr-tomcat",
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "8080",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1003,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "name": "nsgr-mysql",
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3306",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1004,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "apiVersion": "2020-11-01",
        "name": "[concat(parameters('nsgName'), '/nsgr-mysql')]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
        ],
        "properties": {
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "3306",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 1004,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
        }
    },
    {
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "apiVersion": "2020-11-01",
        "name": "[concat(parameters('nsgName'), '/nsgr-ssh')]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
        ],
        "properties": {
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "22",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 1000,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
        }
    },
    {
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "apiVersion": "2020-11-01",
        "name": "[concat(parameters('nsgName'), '/nsgr-tomcat')]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
        ],
        "properties": {
            "protocol": "TCP",
            "sourcePortRange": "*",
            "destinationPortRange": "8080",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 1003,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
        }
    },
    {
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "apiVersion": "2020-11-01",
        "name": "[concat(parameters('nsgName'), '/nsgr-www')]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
        ],
        "properties": {
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "80",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 1001,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
        }
    }
  ],
  "outputs": {}
}
